# knex

./: .gitignore  README.md  TODO.md  batch.py  graph.html  makefile  poc.ipynb  poc1.ipynb  poc2.ipynb  pyproject.toml  setup.py  temp.html  temp.ipynb  test-analyze.py  test-graph-component.py  test.ipynb  test.py  todo.md  tutorial.ipynb
archives/1_assertions_nlp/: setup.py
archives/scripts/: update-ontology.py
archives/testing/: __init__.py
archives/v0/: presentation-knex-v0.pptx
archives/v0.1_assertions_nlp/: spacy-cheatsheet.md
archives/v0.2_assertions_langchain/: .gitignore  makefile
documents/presentation/: presentation-knex-v1.pptx
knex/: __init__.py  assertions.py  debug.py  globals.py  llm.py  main.py  tools.py
knex-gui/: server.py
knex-gui/components/: create_entity.py  create_triple.py  init.py  menu.py  utils.py
knex-gui/data/: tabular_persons_example
knex-gui/pages/: 1-1_presentation.py  1-2_extracted-data.py  2-1_add-graph.py  2-1_load-graph.py  2-2_add-tabular.py  2-2_explore.py  2-3_explore.py  2-3_visualize.py  2-4_interact.py  2-4_visualize.py  3-1_add_lod_silos.py  (+11 more)
learning/: langchain_tutorials.ipynb  poc.ipynb
notebooks/: occupations-retrieval.ipynb
scripts/: analyze.py  graph-component-test.py  hls-knowledge-graphs.py  knex-batch-hls.py  llm-logging.py  reverse-proxy-llm.py  run_tests.py  spacy-analyze-text.py  update-ontology.py  upload-hls-graphs.py
templates/: create-graph-component-tests.py  create-graph-component.py  graph-component.py
tests/: full-graphs.py  globals.py  graphs.py  run.py  test.py  test_graph.py
(+174 files in other folders)
